--- a/.env
+++ b/.env
@@ -8,9 +8,9 @@ LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_PORT=3306
+DB_PORT=8889
 DB_DATABASE=ResumeSaaS
-DB_USERNAME=root
+DB_USERNAME=majestysigorta
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
